# AlphaTrader

./: .gitignore  NVDA_stock_data.csv  pyproject.toml
alpha_trader/: alphatrader_warehouse.sql  crawl_data.py  data_uploader_snowflake.py
